--- a/tariff-page-stile.css
+++ b/tariff-page-stile.css
@@ -107,7 +107,7 @@
   text-transform: uppercase;
 }
 .questions {
-  margin: 0px 5%;
+  margin: 0px 25px;  
 }
 .advantages-box__list {
   display: flex;
